<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Proyecto</string>
    <string name="editText_usuario_iniciar_sesion">Usuario</string>
    <string name="editText_password_iniciar_sesion">Contraseña</string>
    <string name="button_iniciar_sesion">Iniciar Sesión</string>
    <string name="button_registrarse">Registrarse</string>
    <string name="textView_titulo_registrarse">CREAR NUEVA CUENTA</string>
    <string name="editText_nombre_registrarse">Introduce un nombre</string>
    <string name="editText_apellidos_registrar">Introduce tus apellidos</string>
    <string name="checkBox_hombre_registrar">Hombre</string>
    <string name="checkBox_mujer_registrar">Mujer</string>
    <string name="editText_localidad_registrarse">Introduce tu localidad</string>
    <string name="editText_telefono_registrarse">Introduce tu número de teléfono (opcional)</string>
    <string name="editText_usuario_registrar">Introduce un usuario</string>
    <string name="editText_password_registrar">Introduce una contraseña</string>
    <string name="editText_password_registrar_validacion">Introduce de nuevo tu contraseña</string>
    <string name="button_cancelar_registrar">Cancelar</string>
    <string name="button_crear_registrarse">Crear</string>
    <string name="radioButton_termino_uno">Terminos y condiciones</string>
    <string name="radioButton_termino_dos">Terminos y condiciones</string>
    <string name="textView_fecha_nacimiento_registrar">Fecha de nacimiento:</string>
    <string name="textView_nacionalidad_registrar">Nacionalidad:</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_inicio_asignaturas">Asignaturas</string>
    <string name="menu_inicio_profesores">Profesores</string>
    <string name="menu_inicio_horario">Horario</string>
    <string name="menu_inicio_cuenta">Cuenta</string>
    <string name="menu__opciones_cuenta_configuracion">Configuración</string>
    <string name="menu__opciones_cuenta_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_anadir_cursos_asignaturas">Nuevo curso</string>
    <string name="menu_modificar_cursos_asignaturas">Modificar curso</string>
    <string name="menu_eliminar_cursos_asignaturas">Eliminar curso</string>
    <string name="menu_anadir_alumno">Nuevo alumno</string>
    <string name="menu_eliminar_alumno">Eliminar alumno</string>
    <string name="menu_anadir_cursos_profesores">Nuevo curso</string>
    <string name="menu_modificar_cursos_profesores">Modificar curso</string>
    <string name="menu_eliminar_cursos_profesores">Eliminar curso</string>
    <string name="menu_anadir_asignaturas">Nueva asignatura</string>
    <string name="menu_eliminar_asignaturas">Eliminar asignatura</string>
    <string name="menu_modificar_asignaturas">Modificar asignatura</string>
    <string name="menu_anadir_profesores" tools:ignore="Typos">Nuevo profesor</string>
    <string name="menu_modificar_profesor" tools:ignore="Typos">Modificar profesor</string>
    <string name="menu_eliminar_profesor">Eliminar professor</string>
    <string name="menu_anadir_cursos_horarios">Nuevo curso</string>
    <string name="menu_modificar_cursos_horarios">Modificar curso</string>
    <string name="menu_eliminar_cursos_horarios">Eliminar curso</string>
    <string name="opcionSi">Salir</string>
    <string name="opcionNo">Cancelar</string>
    <string name="mensajeSeguroSalir">Si pulsa el botón salir su sesión se cerrará para dicha aplicación. ¿Desea salir de la sesión?</string>
    <string name="textView_informacion_personal_cuenta">Información personal</string>
    <string name="textView_nombre_cuenta">Nombre</string>
    <string name="textView_apellidos_cuenta">Apellidos</string>
    <string name="textView_fecha_nacimiento_cuenta">Fecha de nacimiento</string>
    <string name="textView_usuario_cuenta">Usuario</string>
    <string name="textView_sexo_cuenta">Sexo</string>
    <string name="textView_informacion_nombre_cuenta">Nombre cliente</string>
    <string name="textView_informacion_apellidos_cuenta">Apellido1 Apellido2</string>
    <string name="textView_informacion_sexo_cuenta">Sexo escogido</string>
    <string name="textView_infomacion_fecha_nacimiento_cuenta">16/07/1994</string>
    <string name="textView_informacion_usuario_cuenta">Nombre de usuario</string>
    <string name="textView_email_usuario_cuenta">Email</string>
    <string name="textView_telefono_usuario_cuenta">Teléfono</string>
    <string name="textView_nacionalidad_usuario_cuenta">Nacionalidad</string>
    <string name="textView_localidad_usuario_cuenta">Localidad</string>
    <string name="menu_contextual_alumno_modificar">Modificar alumno</string>
    <string name="menu_contextual_alumno_enviar_email">Enviar email</string>
    <string name="menu_contextual_alumno_llamar">Llamar</string>
    <string name="textView_pagina_principal">¡ BIENVENIDO A LA APP !</string>
    <string name="textView_pagina_principl_texto">Bienvenido a la aplicación usuario. Usted acaba de acceder a la apliación . Esta apliación está dirigida para llevar una mejor gestión en el mundo escolar. Como puedes comprobar se trata de un prototipo que no cuenta con todas las funcionalidades finales de la app, así como no cuenta con su aspecto final. Nos gustaría en un futuro que la aplicación presentase una apariencia más atractiva. De la misma forma, desde nuesra organización nos gustaría hacer que esta aplicación estuviera dirigida a dos tipos de usuario. En primer lugar y como se puede ver en este prototipo la aplicación irá dirigida a los profesores o docentes de centros escolares, de secundaria, etc. Sin embargo, nos gustaría diseñar otra versión que iría dirigida a los estudiantes, mediante la cual podrían gestionar funciones que les podrian resultar interesantes, como llevar un control de las tareas realizadas, un control de sus notas, tener una agenda o funciones del tipo. Esperamos que esta primera versión (primer prototipo) os permita haceros una idea del proyecto que tenemos entre manos.</string>
    <string name="descripcion_foto_profesor" tools:ignore="Typos">Foto del profesor</string>
    <string name="descripcion_foto_alumno">Foto del alumno</string>
    <string name="descripcion_foto_horario">Horario</string>
    <string name="descripcion_foto_inicio">Logo de la app</string>
    <string name="textView_siglas_curso">Siglas curso</string>
    <string name="textView_descripcion_curso">Descripcion curso</string>
    <string name="textView_siglas_asignatura">Siglas asignatura</string>
    <string name="textView_descripcion_asignatura">Nombre</string>
    <string name="textView_aula_asignatura">Aula asignatura</string>
    <string name="textViex_titulo_anadir_curso">NUEVO CURSO</string>
    <string name="editText_anadir_siglas_curso">Siglas</string>
    <string name="editText_anadir_descripcion_curso">Nombre</string>
    <string name="button_anadir_curso">AÑADIR</string>
    <string name="button_cancelar_anadir_curso">CANCELAR</string>
    <string name="textView_titulo_anadir_asignatura">NUEVA ASIGNATURA</string>
    <string name="editText_anadir_siglas_asignatura">Siglas</string>
    <string name="editText_anadir_descripcion_asignatura">Nombre </string>
    <string name="editText_anadir_aula_asignatura">Aula</string>
    <string name="button_anadir_asignatura">AÑADIR</string>
    <string name="button_cancelar_anadir_asignatura">CANCELAR</string>
    <string name="textView_titulo_anadir_alumno">NUEVO ALUMNO</string>
    <string name="editText_anadir_nombre_alumno">Nombre</string>
    <string name="editText_anadir_edad_alumno">Edad</string>
    <string name="editText_anadir_email_alumno">Email</string>
    <string name="editText_anadir_domicilio_alumno">Dirección</string>
    <string name="editText_anadir_localidad_alumno">Localidad</string>
    <string name="editText_anadir_telefono_alumno">Teléfono</string>
    <string name="button_anadir_alumno">AÑADIR</string>
    <string name="button_cancelar_anadir_alumno">CANCELAR</string>
    <string name="textView_titulo_anadir_profesor">NUEVO PROFESOR</string>
    <string name="editText_anadir_nombre_profesor">Nombre</string>
    <string name="editText_anadir_asignatura_profesor">Asignatura</string>
    <string name="editText_anadir_email_profesor">Email</string>
    <string name="editText_anadir_telefono_profesor">Teléfono</string>
    <string name="button_anadir_profesor">AÑADIR</string>
    <string name="button_cancelar_anadir_profesor">CANCELAR</string>
    <string name="textViex_titulo_borrar_alumno">BORRAR ALUMNO</string>
    <string name="button_borrar_alumno">BORRAR</string>
    <string name="button_cancelar_borrar_alumno">CANCELAR</string>
    <string name="textViex_titulo_borrar_asignatura">BORRAR ASIGNATURA</string>
    <string name="button_borrr_asignatura">BORRAR</string>
    <string name="button_cancelar_borrar_asignatura">CANCELAR</string>
    <string name="textViex_titulo_borrar_curso">BORRAR CURSO</string>
    <string name="button_borrar_curso">BORRAR</string>
    <string name="button_cancelar_borrar_curso">CANCELAR</string>
    <string name="textViex_titulo_borrar_profesor">BORRAR PROFESOR</string>
    <string name="button_borrar_profesor">BORRAR</string>
    <string name="button_cancelar_borrar_profesor">CANCELAR</string>
    <string name="textViex_titulo_modificar_alumno">MODIFICAR ALUMNO</string>
    <string name="editText_modificar_nombre_alumno">Nombre</string>
    <string name="editText_modificar_edad_alumno">Edad</string>
    <string name="editText_modificar_email_alumno">Email</string>
    <string name="editText_modificar_domicilio_alumno">Domicilio</string>
    <string name="editText_modificar_localidad_alumno">Localidad</string>
    <string name="editText_amodificar_telefono_alumno">Teléfono</string>
    <string name="button_modificarAlumno">MODIFICAR</string>
    <string name="button_cancelar_modificar_alumno">CANCELAR</string>
    <string name="textViex_titulo_modificar_asignatura">MODIFICAR ASIGNATURA</string>
    <string name="editText_modificar_siglas_asignatura">Siglas</string>
    <string name="editText_modificar_descripcion_asignatura">Nombre</string>
    <string name="editText_modificar_aula_asignatura">Aula</string>
    <string name="button_modificar_asignatura">MODIFICAR</string>
    <string name="button_cancelar_modificar_asignatura">CANCELAR</string>
    <string name="textViex_titulo_modificar_curso">MODIFICAR CURSO</string>
    <string name="editText_modificar_siglas_curso">Siglas</string>
    <string name="editText_modificar_descripcion_curso">Nombre</string>
    <string name="button_modificar_curso">MODIFICAR</string>
    <string name="button_cancelar_modificar_curso">CANCELAR</string>
    <string name="textViex_titulo_modificar_profesor">MODIFICAR PROFESOR</string>
    <string name="editText_modificar_nombre_profesor">Nombre</string>
    <string name="editText_modificar_asignatura_profesor">Asignatura</string>
    <string name="editText_modificar_email_profesor">Email</string>
    <string name="editText_modificar_telefono_profesor">Teléfono</string>
    <string name="button_modificar_telefono_profesor">MODIFICAR</string>
    <string name="button_cancelar_modificar_telefono_profesor">CANCELAR</string>
    <string name="textViex_titulo_modificar_usuario">MODIFICAR DATOS DE LA CUENTA</string>
    <string name="editText_modificar_nombre_usuario">Nombre</string>
    <string name="editText_modificar_apellidos_usuario">Apellidos</string>
    <string name="editText_modificar_username_usuario">Nombre de usuario</string>
    <string name="editText_email_modificar_usuario">Email</string>
    <string name="editText_telefono_modificar_usuario">Teléfono</string>
    <string name="editText_localidad_modificar_usuario">LOcalidad</string>
    <string name="checkBox_modificar_hombre_usuario">Hombre</string>
    <string name="checkBox_modificar_mujer_usuario">Mujer</string>
    <string name="button_cancelar_modificar_usuario">CANCELAR</string>
</resources>